# week16-17_cloud_deployment

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: local.env.example  serving.yaml
data/: sample_request.json
infra/: architecture_diagram.md  gcp_cloud_run.md
models/: metadata.json
reports/: api_examples.md  ml_monitoring_plan.md  mlops_system_design.md
scripts/: build_docker.sh  collect_logs.sh  deploy_cloud_run.sh  rollback_cloud_run.sh  run_local_api.py  smoke_test_api.py  smoke_test_endpoint.py  train_baseline_model.py
src/financial_mlops/: __init__.py  features.py  model.py  monitoring.py  schemas.py  service.py
tests/: test_api.py  test_features.py  test_model.py  test_monitoring.py
